Sessão 14 - Angular + .net Core Identity + JWT

--- a/Front/ProEventos-App/src/app/components/contatos/contatos.component.html
+++ b/Front/ProEventos-App/src/app/components/contatos/contatos.component.html
@@ -1,7 +1,7 @@
 <app-titulo
   [tituloPrincipal]="'Contatos'"
   [subtitulo]="'Gestão de contatos'"
-  [iconClass]="'fa  fa-address-book'"
+  [iconClass]="'fa  fa-envelope-open-text'"
   [exibeBotao] = "false">
 </app-titulo>
 
