--- a/Front/ProEventos-App/src/app/components/dashboard/dashboard.component.html
+++ b/Front/ProEventos-App/src/app/components/dashboard/dashboard.component.html
@@ -1,1 +1,7 @@
-<app-titulo [titulo]="tituloTela"></app-titulo>
+<app-titulo
+  [tituloPrincipal]="'Dashboard'"
+  [subtitulo]="'Gestão de eventos'"
+  [iconClass]="'fa fa-chart-bar'"
+  [exibeBotao]="false"
+  [link]="''"
+></app-titulo>
