--- a/Front/ProEventos-App/src/app/components/user/perfil/perfil.component.html
+++ b/Front/ProEventos-App/src/app/components/user/perfil/perfil.component.html
@@ -5,9 +5,8 @@
   [exibeBotao]="false"
 >
 </app-titulo>
-
 <div class="card rounded shadow-sm">
-  <form [formGroup]="form">
+  <form [formGroup]="form" (ngSubmit)="onSubmit($event)">
     <div class="row p-3">
       <div class="col-lg-3 pt-1">
         <div class="card mb-3">
@@ -24,23 +23,22 @@
             </a>
           </div>
           <div class="card-body">
-            <div class="h4 text-center mb-3">@UserName</div>
-            <div class="h7 text-bold pb-1"><b>Nome:</b> Miracles Lee Cross</div>
+            <div class="h4 text-center mb-3">@{{f.userName.value}}</div>
+            <div class="h7 text-bold pb-1"><b>Nome:</b> {{f.primeiroNome.value + ' ' + f.ultimoNome.value}}</div>
             <div class="h7">
-              Developer of web applications, JavaScript, PHP, Java, Python,
-              Ruby, Java, Node.js, etc.
+              {{f.descricao.value}}
             </div>
           </div>
           <ul class="list-group list-group-flush">
             <li class="list-group-item">
               <div class="row">
                 <div class="col-6 text-center border-right">
-                  <div class="h5">1342</div>
-                  <div class="h6 text-muted">Eventos Ministrados</div>
+                  <div class="h5">0</div>
+                  <div class="h6 text-muted">Meus eventos criados</div>
                 </div>
                 <div class="col-6 text-center">
-                  <div class="h5">1342</div>
-                  <div class="h6 text-muted">Eventos Participados</div>
+                  <div class="h5">0</div>
+                  <div class="h6 text-muted">Eventos como participante</div>
                 </div>
               </div>
             </li>
@@ -57,15 +55,14 @@
             <label>Título</label>
             <select class="form-control" formControlName="titulo"
               [ngClass]="{'is-invalid': f.titulo.errors && f.titulo.touched}">
-              <option value=""></option>
-              <option value="0">Não Quero</option>
-              <option value="Senhorita">Tecnólogo(a)</option>
-              <option value="Senhorita">Bacharel</option>
-              <option value="Senhorita">Especialista</option>
-              <option value="Senhorita">Pós Graduado(a)</option>
-              <option value="Senhorita">Mestre</option>
-              <option value="Senhorita">Doutor(a)</option>
-              <option value="Senhorita">Pós Doc</option>
+              <option value="NaoInformado">Não Quero</option>
+              <option value="Tecnologo">Tecnólogo(a)</option>
+              <option value="Baicharel">Bacharel</option>
+              <option value="Especialista">Especialista</option>
+              <option value="PosGraduado">Pós Graduado(a)</option>
+              <option value="Mestrado">Mestre</option>
+              <option value="Doutorado">Doutor(a)</option>
+              <option value="PosDoc">Pós Doc</option>
             </select>
             <div class="invalid-feedback" *ngIf="f.titulo.errors?.required && f.titulo.touched">
               titulo é obrigatório.
@@ -99,15 +96,15 @@
           </div>
           <div class="form-group col-sm-4">
             <label>Telefone</label>
-            <input type="text" class="form-control" formControlName="telefone" [ngClass]="{'is-invalid': f.telefone.errors && f.telefone.touched}"/>
-            <div class="invalid-feedback" *ngIf="f.telefone.errors?.required && f.telefone.touched">
+            <input type="text" class="form-control" formControlName="phoneNumber" [ngClass]="{'is-invalid': f.phoneNumber.errors && f.phoneNumber.touched}"/>
+            <div class="invalid-feedback" *ngIf="f.phoneNumber.errors?.required && f.phoneNumber.touched">
               telefone é obrigatório.
             </div>
           </div>
           <div class="form-group col-sm">
             <label>Função</label>
             <select class="form-control" formControlName="funcao" [ngClass]="{'is-invalid': f.funcao.errors && f.funcao.touched}">
-              <option value=""></option>
+              <option value="NaoInformado">Não Informado</option>
               <option value="Participante">Participante</option>
               <option value="Palestrante">Palestrante</option>
             </select>
@@ -115,13 +112,13 @@
               função é obrigatório.
             </div>
           </div>
-          <form-group class="col-12">
+          <div class="form-group col-12">
             <label>Descrição</label>
-            <input type="text" class="form-control" formControlName="descricao" [ngClass]="{'is-invalid': f.descricao.errors && f.descricao.touched}"/>
+            <input type="text" autocomplete="off" class="form-control" formControlName="descricao" [ngClass]="{'is-invalid': f.descricao.errors && f.descricao.touched}"/>
             <div class="invalid-feedback" *ngIf="f.descricao.errors?.required && f.descricao.touched">
               descrição é obrigatória.
             </div>
-          </form-group>
+          </div>
         </div>
         <div>
           <h3 class="pt-3 border-bottom">Mudar Senha</h3>
@@ -130,21 +127,21 @@
         <div class="form-row">
           <div class="form-group col-sm">
             <label>Senha</label>
-            <input type="password" class="form-control" formControlName="senha" [ngClass]="{'is-invalid': f.senha.errors && f.senha.touched}"/>
-            <div class="invalid-feedback" *ngIf="f.senha.errors?.required && f.senha.touched">
+            <input type="password" autocomplete="off" class="form-control" formControlName="password" [ngClass]="{'is-invalid': f.password.errors && f.password.touched}"/>
+            <div class="invalid-feedback" *ngIf="f.password.errors?.required && f.password.touched">
               senha é obrigatória.
             </div>
-            <div class="invalid-feedback" *ngIf="f.senha.errors?.minlength && f.senha.touched">
+            <div class="invalid-feedback" *ngIf="f.password.errors?.minlength && f.password.touched">
               senha deve conter no mínimo 6 caracteres.
             </div>
           </div>
           <div class="form-group col-sm">
             <label>Confirmar Senha</label>
-            <input type="password" class="form-control" formControlName="confirmeSenha" [ngClass]="{'is-invalid': f.confirmeSenha.errors && f.confirmeSenha.touched}"/>
-            <div class="invalid-feedback" *ngIf="f.confirmeSenha.errors?.required && f.confirmeSenha.touched">
+            <input type="password" class="form-control" formControlName="confirmePassword" [ngClass]="{'is-invalid': f.confirmePassword.errors && f.confirmePassword.touched}"/>
+            <div class="invalid-feedback" *ngIf="f.confirmePassword.errors?.required && f.confirmePassword.touched">
               confirmar senha é obrigatória.
             </div>
-            <div class="invalid-feedback" *ngIf="f.confirmeSenha.errors?.mustMatch && f.confirmeSenha.touched">
+            <div class="invalid-feedback" *ngIf="f.confirmePassword.errors?.mustMatch && f.confirmePassword.touched">
               confirmar senha deve ser igual a senha.
             </div>
           </div>
@@ -156,7 +153,7 @@
         <button class="btn btn-outline-secondary mr-auto border" (click)="resetForm($event)">
           Cancelar Alteração
         </button>
-        <button class="btn btn-success" [disabled]="!form.valid">
+        <button class="btn btn-success" [disabled]="!form.valid" type="submit">
           <!-- <span class="spinner-border spinner-border-sm mr-1"></span> -->
           Salvar Alteração
         </button>
